# ELA_Lab_Exercises

./: .gitignore  README.md  gitignore.txt
Beaglebone-test-apps/i2c-example/: i2c-eeprom-read.c
Debugging-files/CoreDump/: Makefile  array_core.c  crash_core.c
Debugging-files/GDB/: Makefile  array_operations  array_operations.c
Debugging-files/Valgrind/: Makefile  faulty_mem_app  faulty_mem_app.c
Debugging-files/cachegrind/: Makefile  linked_list.c
Debugging-files/kernel-panic/: panic_module.c
Debugging-files/kernel_panic/: Makefile
Debugging-files/oom-killer/: Makefile  oom_test.sh
Debugging-files/oom_killer/: Makefile  oom_killer.c
Debugging-files/scripts/: S99device-readerscript  S99network-communicationscript  device_rw.sh  target-server
IoT-Project/: README.md
IoT-Project/ESP32_AQIMonitorSystem1/: CMakeLists.txt  partitions.csv  sdkconfig
IoT-Project/ESP32_AQIMonitorSystem1/components/ble/: CMakeLists.txt  ble.c  ble.h
IoT-Project/ESP32_AQIMonitorSystem1/components/eeprom/: CMakeLists.txt
IoT-Project/ESP32_AQIMonitorSystem1/main/: CMakeLists.txt  data_collection.c  data_collection.h  data_display.c  data_storage.c  led.c  main.c  mqtts.c  mqtts.h  rtc.c  rtc.h
IoT-Project/ESP32_AQIMonitorSystem2/: sdkconfig  sdkconfig.old
IoT-Project/ESP32_AQIMonitorSystem2/components/adc/: CMakeLists.txt
IoT-Project/ESP32_AQIMonitorSystem3/: sdkconfig
IoT-Project/ESP32_AWS-Lambda_Functions/: README.md  WebSocketConnectHandler.py  WebSocketDisconnectHandler.py  WebSocketRealTimeDataHandler.py  WebSocketSetIntervalHandler.py  sendHistoricalDataRestAPI.py
IoT-Project/ESP32_AirQaulityMonitor/: CMakeLists.txt  sdkconfig  sdkconfig.old
IoT-Project/ESP32_AirQaulityMonitor/components/sds011/: CMakeLists.txt  sds011.c  sds011.h
IoT-Project/ESP32_AirQaulityMonitor/components/wifi/: CMakeLists.txt  wifi.c  wifi.h
IoT-Project/ESP32_AirQaulityMonitor/main/: .data_collection.c.swo  CMakeLists.txt  bme680_sensor.c  bme680_sensor.h  command_process.c  data_collection.c  data_display.c  data_display.h  data_storage.c  main.c  main.h  mq135.c  mq135.h  mqtts.c  mqtts.h  rtc.c  rtc.h
IoT-Project/mobile_aqi_monitor/: README.md  pubspec.yaml
Misc/: README  tlpi_01.patch
UserSpace_Programs/: Makefile  Message_Queue.c  clean_all.sh
UserSpace_Programs/01_Process_Creation/: 01_Process Creation.docx  Makefile  Process Creation.docx  Process_Creation  Process_Creation.c
UserSpace_Programs/01_Process_creation_Termination/: Process_Creation  Process_Creation.c
UserSpace_Programs/02_Child_Process_Creation_ececl/: Child_Creation_execl.docx  Child_Process  Child_Process.c  Child_Process_execl  Child_Process_execl.c
UserSpace_Programs/02_Child_Process_Creation_execl/: 02_Child_Creation_execl.docx  Child_Process_execl  Child_Process_execl.c  Makefile
UserSpace_Programs/03_Child_Process_Creation_ececve/: Child_Creation_execve.docx  Child_Process  Child_Process_ececve.c
UserSpace_Programs/03_Child_Process_Creation_execve/: 03_Child_Creation_execve.docx  Makefile  child_process_execve  child_process_execve.c  print_data.c
UserSpace_Programs/04_Orphan_Process/: 04_Orphan_Process.docx  Makefile  Orphan_Process  Orphan_Process.c
UserSpace_Programs/04_Process_Termination_orphanProcess/: 04_Orphan_Process.docx  Makefile  Orphan_Process  Orphan_Process.c  Orphan_Process.docx
UserSpace_Programs/05_Process_Termination_zombieProcess/: 05_Zombie_Process.docx  Makefile  Zombie_Process  Zombie_Process.c  Zombie_Process.docx
UserSpace_Programs/05_Zombie_Process/: Makefile  Zombie_Process.c
UserSpace_Programs/06_Thread_Creation/: .Thread_Creation.c.swp  06_Thread_Creation.docx  Makefile  Thread_Creation  Thread_Creation.c
UserSpace_Programs/07_Thread_Termination/: 07_Thread_Termination.docx  Makefile  Thread_Termination.c
UserSpace_Programs/08_ThreadID_Demonistration/: Makefile  Thread_IDs.c
UserSpace_Programs/08_ThreadID_Demonstration/: 08_Thread_ID_Demonstation.docx  Makefile  Thread_IDs  Thread_IDs.c
UserSpace_Programs/09_Thread_with_Atrributes/: .Thread_Attributes.c.swo  09_Thread_Attributes.docx  Makefile  Thread_Attributes  Thread_Attributes.c
UserSpace_Programs/10_Pipe_creation/: .pipe_creation.c.swp  Makefile  pipe_creation  pipe_creation.c  pipe_using_dup.c  readme  simple_pipe.c
UserSpace_Programs/11_FIFO/: .error_handling.c.swp  .fifo.c.swp  .fifo.h.swp  .server_fifo.c.swp  FIFO  Makefile  Simple_Fifo.c  client_fifo  client_fifo.c  common.h  error_functions.c  error_handling.c  error_handling.h  fifo.c  fifo.h  get_num.c  readme  server_fifo  server_fifo.c  tlpi_hdr.h
UserSpace_Programs/12_POSIX_Message_Queue/: Makefile  Message_Queue  Message_Queue.c  User_MsgQueue  User_MsgQueue.c  readme
UserSpace_Programs/12_Posix_Message_Queue/: .Message_Queue.c.swp  Makefile  Message_Queue  Message_Queue.c  User_MsgQueue  User_MsgQueue.c
UserSpace_Programs/13_Stream_Sockets_In_Unix_Domian/: .server_socket.c.swp  client_socket  client_socket.c  server_socket  server_socket.c
UserSpace_Programs/13_Unix_Domain_Stream_Socket/: Makefile  UNIX_Stream_ClntSkt.c  UNIX_Stream_SrvrSkt.c  readme
UserSpace_Programs/14_Datagrams_Sockets_In_Unix_Domain/: Dclient_socket  Dclient_socket.c  Dserver_socket  Dserver_socket.c  Unix_Datagram_ClientSocket  Unix_Datagram_ClientSocket.c  Unix_Datagram_ServerSocket  Unix_Datagram_ServerSocket.c
gcc_tutorial/: Makefile
gcc_tutorial/autoconf/: sub.c  (+2 more)
(+384 files in other folders)
